k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: evo-todo
  labels:
    app.kubernetes.io/name: evo-todo
    app.kubernetes.io/part-of: evolution-todo-app
